# ppt_skills

./: .gitignore  README.md  pyproject.toml  requirements.txt  skill.md
docs/superpowers/plans/: 2026-04-18-ppt-skill-implementation.md
docs/superpowers/specs/: 2026-04-18-ppt-skill-design.md
examples/: README.md  agentic_ai_briefing.json  consulting_proposal.json  monthly_report.json
src/: __init__.py  cli.py  generator.py  linter.py  scaffold.py  schema.json  thumbnail.py  validator.py
src/components/: __init__.py  _style.py  chart.py  footer.py  icon.py  shape.py  source_note.py  table.py  text.py  timeline.py
src/layouts/: __init__.py  agenda.py  chart_page.py  closing.py  comparison.py  content.py  cover.py  section_divider.py
src/themes/: __init__.py  base.py  colorful.py  dark.py  monotone.py
tests/: conftest.py  test_chart.py  test_e2e.py  test_examples.py  test_generator.py  test_icon.py  test_icons.py  test_layouts.py  test_linter.py  test_new_charts.py  test_new_features.py  test_scaffold.py  test_shape.py  test_source_field.py  test_table.py  test_table_features.py  test_text.py  test_themes.py  test_timeline.py  test_validator.py  test_visual_regression.py
